Adding users json - hopefully

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,9 @@
 <!--suppress HtmlUnknownTarget -->
 <html>
+<head>
+    <!-- version 1.0-0001 -->
+    <title>Hold12</title>
+</head>
 <body>
 <h2>Hello World! React App coming Up</h2>
 <button id="link-btn">Get hello message from rest!</button>
