--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,19 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-serialize-object/2.5.0/jquery.serialize-object.min.js"></script>
 <script>
     $(document).ready(function() {
+        var json;
+        $.ajax({
+            url : 'rest/users',
+            type : 'GET',
+            success: function(data) {
+                json = $.parseJSON(data);
+            }
+        });
+
+        $.each(json, function(i, obj) {
+            alert(obj.username);
+        });
+
         $('#link-btn').click(function() {
             $.ajax({
                 url : 'rest/hello',
