--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,52 +1,30 @@
-<!--suppress HtmlUnknownTarget -->
+<!DOCTYPE html>
+<!-- build: 1.0-0003 -->
 <html>
 <head>
-    <!-- version 1.0-0002 -->
-    <title>Hold12</title>
+    <meta charset="utf-8" />
+    <title>Hold 12 - 12cdio3</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-serialize-object/2.5.0/jquery.serialize-object.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css" />
 </head>
 <body>
-<h2>Hello World! React App coming Up</h2>
-<button id="link-btn">Get hello message from rest!</button>
-<h4>Message:</h4>
-<div id="adiv">Something...</div>
-
+<h1>Hello</h1>
 <p id="testing"></p>
 
-<div id="user-admin">
-    <table></table>
+<div class="users">
+    <table id="users-table">
+        <tr>
+            <th>User ID</th>
+            <th>Username</th>
+            <th>Initials</th>
+            <th>CPR</th>
+            <th>Password</th>
+            <th>Roles</th>
+        </tr>
+    </table>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-serialize-object/2.5.0/jquery.serialize-object.min.js"></script>
-<script>
-    $(document).ready(function() {
-        $('#link-btn').click(function() {
-            $.ajax({
-                url : 'rest/hello',
-                type: 'GET',
-                success: function(data) {
-                    $('#adiv').html(data);
-                }
-            });
-        return false;
-        });
-    });
-</script>
-<script>
-    var url = "rest/users";
-    $(document).ready(function() {
-        $.getJSON(url, function (data) {
-            var row;
-            for ( var i = 0;  i < data.length; i++){
-                row = $('<tr/>');
-                row.append("<td>" + data[i].UserId + "</td>");
-                row.append("<td>" + data[i].username + "</td>");
-                row.append("<td>" + data[i].initials + "</td>");
-                row.append("<td>" + data[i].cpr + "</td>");
-                row.append("<td>" + data[i].password + "</td>");
-                row.append("<td>" + data[i].roles + "</td>");
-            }
-        });
-    });
-</script>
+
+<script src="assets/app.js"></script>
 </body>
 </html>
