--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,21 +7,41 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css" />
 </head>
 <body>
-<h1>Hello</h1>
-<p id="testing"></p>
+<div class="row">
+    <h1 id="test">Welcome to team 12! <small>12cdio3</small></h1>
 
-<div class="users">
-    <table id="users-table">
-        <tr>
-            <th>User ID</th>
-            <th>Username</th>
-            <th>Initials</th>
-            <th>CPR</th>
-            <th>Password</th>
-            <th>Roles</th>
-        </tr>
-    </table>
+    <a id="create-user-btn" class="button">Create a new user</a>
 </div>
+
+<!--<button id="create-user-btn" class="button">Create a new user</button>-->
+
+<div class="row" id="create_user" style="display:block;">
+    <form action="rest/create-user" method="post" id="create-user">
+        <label for="userId" class="label">User ID</label><input type="text" id="userId" placeholder="Enter user id (fx: 1)" required />
+        <label for="username" class="label">Username</label><input type="text" id="username" placeholder="Enter username (fx: John_Doe_15inch)" required />
+        <label for="initials" class="label">Initials</label><input type="text" id="initials" placeholder="Enter initials (fx: JD)" required />
+        <label for="password" class="label">Password</label><input type="password" id="password" placeholder="Enter password (fx: my_zUp3rDuperPWD12!)" required />
+        <label for="roles" class="label">Roles</label><input type="text" id="roles" placeholder="Enter comma seperated roles (fx: Admin, Pharmacist)" required />
+
+        <input type="submit" class="button" value="Submit new user" />
+    </form>
+</div>
+
+<div class="row" id="show_users" style="display:none">
+    <div class="users">
+        <table id="users-table">
+            <tr>
+                <th>User ID</th>
+                <th>Username</th>
+                <th>Initials</th>
+                <th>CPR</th>
+                <th>Password</th>
+                <th>Roles</th>
+            </tr>
+        </table>
+    </div>
+</div>
+
 
 <script src="assets/app.js"></script>
 </body>
