--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 
 <!--<button id="create-user-btn" class="button">Create a new user</button>-->
 
-<div class="row" id="create_user" style="display:block;">
+<div class="row" id="create_user" style="display:none;">
     <form action="rest/create-user" method="post" id="create-user">
         <label for="userId" class="label">User ID</label><input type="text" id="userId" placeholder="Enter user id (fx: 1)" required />
         <label for="username" class="label">Username</label><input type="text" id="username" placeholder="Enter username (fx: John_Doe_15inch)" required />
@@ -27,7 +27,7 @@
     </form>
 </div>
 
-<div class="row" id="show_users" style="display:none">
+<div class="row" id="show_users" style="display:block">
     <div class="users">
         <table id="users-table">
             <tr>
