--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE>
-<!-- version 1.0-0012 -->
+<!-- version 1.0-0013 -->
 <html>
 <head>
     <meta charset="utf-8" />
@@ -22,6 +22,7 @@
         <label for="userId" class="label">User ID</label><input type="text" id="userId" placeholder="Enter user id (fx: 1)" required />
         <label for="username" class="label">Username</label><input type="text" id="username" placeholder="Enter username (fx: John_Doe_15inch)" required />
         <label for="initials" class="label">Initials</label><input type="text" id="initials" placeholder="Enter initials (fx: JD)" required />
+        <label for="cpr" class="cpr">CPR</label><input type="text" id="cpr" placeholder="Enter CPR (fx: 010190-1233)" required />
         <label for="password" class="label">Password</label><input type="password" id="password" placeholder="Enter password (fx: my_zUp3rDuperPWD12!)" required />
         <label for="roles" class="label">Roles</label><input type="text" id="roles" placeholder="Enter comma seperated roles (fx: Admin, Pharmacist)" required />
 
