--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE>
-<!-- version 1.0-0015 -->
+<!-- version 1.0-0016 -->
 <html>
 <head>
     <meta charset="utf-8" />
@@ -18,7 +18,7 @@
 <!--<button id="create-user-btn" class="button">Create a new user</button>-->
 
 <div class="row" id="create_user" style="display:none;">
-    <form action="rest/create-user" method="post" id="create-user">
+    <form action="rest/create-user" method="post" id="create-user" enctype="application/json">
         <label for="userId" class="label">User ID</label><input type="text" name="userId" id="userId" placeholder="Enter user id (fx: 1)" required />
         <label for="username" class="label">Username</label><input type="text" name="username" id="username" placeholder="Enter username (fx: John_Doe_15inch)" required />
         <label for="initials" class="label">Initials</label><input type="text" name="initials" id="initials" placeholder="Enter initials (fx: JD)" required />
