--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE>
-<!-- version 1.0-0016 -->
+<!-- version 1.0-0017 -->
 <html>
 <head>
     <meta charset="utf-8" />
@@ -18,22 +18,22 @@
 <!--<button id="create-user-btn" class="button">Create a new user</button>-->
 
 <div class="row" id="create_user" style="display:none;">
-    <form action="rest/create-user" method="post" id="create-user" enctype="application/json">
-        <label for="userId" class="label">User ID</label><input type="text" name="userId" id="userId" placeholder="Enter user id (fx: 1)" required />
+    <form  method="post" id="create-user-form" enctype="application/json">
+        <label for="userId" class="label">User ID</label><input type="number" name="userId" id="userId" placeholder="Enter user id (fx: 1)" required />
         <label for="username" class="label">Username</label><input type="text" name="username" id="username" placeholder="Enter username (fx: John_Doe_15inch)" required />
         <label for="initials" class="label">Initials</label><input type="text" name="initials" id="initials" placeholder="Enter initials (fx: JD)" required />
         <label for="cpr" class="button">CPR</label><input type="text" name="cpr" id="cpr" placeholder="Enter CPR (fx: 010190-1233)" required />
         <label for="password" class="label">Password</label><input type="password" name="password" id="password" placeholder="Enter password (fx: my_zUp3rDuperPWD12!)" required />
-        <!--<label for="roles" class="label">Roles</label><input type="text" id="roles" placeholder="Enter comma separated roles (fx: Admin, Pharmacist)" required />-->
-        <label for="roles" class="label">Roles</label>
+        <label for="roles" class="label">Roles</label><input type="text" name="roles" id="roles" placeholder="Enter comma separated roles (fx: Admin, Pharmacist)" required />
+        <!--<label for="roles" class="label">Roles</label>
         <select id="roles" name="roles" multiple>
             <option value="admin">Admin</option>
             <option value="pharmacist">Pharmacist</option>
             <option value="operator">Operator</option>
             <option value="labtech">labtech</option>
-        </select>
+        </select>-->
 
-        <input type="submit" class="button" value="Submit new user" />
+        <input type="button" class="button" id="submit-new-user-btn" value="Submit new user" />
     </form>
 </div>
 
