create test users

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE>
-<!-- version 1.0-0020 -->
+<!-- version 1.0-0021 -->
 <html>
 <head>
     <meta charset="utf-8" />
@@ -13,7 +13,7 @@
     <h1 id="test">Welcome to team 12! <small>12cdio3</small></h1>
 
     <a id="create-user-btn" class="button">Create a new user</a>
-    <a href="rest/create-test-users" class="buttton">Create test users</a>
+    <a href="rest/create-test-users" class="button">Create test users</a>
 </div>
 
 <!--<button id="create-user-btn" class="button">Create a new user</button>-->
