--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,11 +7,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-serialize-object/2.5.0/jquery.serialize-object.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body>
 <div class="row">
     <h1 id="test">Welcome to team 12! <small>12cdio3</small></h1>
 
+    <a id="refresh-users-btn" class="button"><i class="fa fa-refresh" aria-hidden="true"></i></a>
     <a id="create-user-btn" class="button">Create a new user</a>
     <a id="create-test-users-btn" class="button">Create test users</a>
 </div>
