--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE>
-<!-- version 1.0-0034 -->
+<!-- version 1.0-0035 -->
 <html>
 <head>
     <meta charset="utf-8" />
@@ -8,14 +8,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-serialize-object/2.5.0/jquery.serialize-object.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="assets/dark.css" />
 </head>
 <body>
 <div class="row">
     <h1 id="test">Welcome to team 12! <small>12cdio3</small></h1>
 
-    <a id="refresh-users-btn" class="button"><i class="fa fa-refresh" aria-hidden="true"></i></a>
-    <a id="create-user-btn" class="button">Create a new user</a>
-    <a id="create-test-users-btn" class="button">Create test users</a>
+    <a id="refresh-users-btn" class="button round"><i class="fa fa-refresh" aria-hidden="true"></i></a>
+    <a id="create-user-btn" class="button secondary">Create a new user</a>
+    <a id="create-test-users-btn" class="button secondary">Create test users</a>
 </div>
 
 <!--<button id="create-user-btn" class="button">Create a new user</button>-->
